--- a/style.css
+++ b/style.css
@@ -304,8 +304,12 @@ footer {
 @media (max-width: 768px) {
   .nav {
     position: fixed;
-    top: 70px;
+    top: 0;
     right: 0;
+    height: 100vh;
+    width: 70%;
+    /* top: 70px;
+    right: 0; */
     background: rgb(158, 158, 158);
     color: rgb(20, 20, 20);
     width: 200px;
@@ -320,8 +324,12 @@ footer {
     flex-direction: column;
     padding: 2em;
   }
+  body{
+    overflow: hidden;
+  }
   .hamburger {
     display: flex;
+    z-index: 1000;
   }
   .hero-img {
     display: none; /* hide image on mobile */
