--- a/style.css
+++ b/style.css
@@ -306,9 +306,9 @@ footer {
     display:none;
     position: fixed;
     /* top: 0;
-    right: 0;
+    right: 0;*/
     height: 100vh;
-    width: 70%; */
+    width: 70%; 
     top: 70px;
     right: 0;
     background: rgb(145, 84, 114);
