--- a/style.css
+++ b/style.css
@@ -303,17 +303,21 @@ footer {
 /* Mobile menu */
 @media (max-width: 768px) {
   .nav {
-    display:none;
+    
     position: fixed;
     /* top: 0;
     right: 0;*/
-    height: 100vh;
-    width: 70%; 
+    height: 40vh;
+     
     top: 70px;
     right: 0;
-    background: rgb(145, 84, 114);
+    background: rgb(240, 209, 224);
     color: rgb(20, 20, 20);
     width: 200px;
+    display: flex; /* must be flex for ul to stack vertically */
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
     transform: translateX(100%);
     transition: 0.3s;
     z-index: 999;
@@ -325,7 +329,7 @@ footer {
     flex-direction: column;
     padding: 2em;
   }
-  body{
+  body.menu-open{
     overflow: hidden;
   }
   .hamburger {
