--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@
   padding: 0;
   box-sizing: border-box;
 }
+html {
+  overflow-x: hidden; /* important! */
+}
+
 
 body {
   font-family: var(--font-body);
@@ -18,6 +22,8 @@ body {
   color: var(--color-dark);
   /* background-color: #222; */
   overflow-x: hidden;
+  
+  
 }
 
 /* Header */
@@ -182,7 +188,7 @@ h2{
 
 .crop{
   text-align: center;
-  margin: 20px;
+  padding: 5px;
 }
 
 .center{
@@ -310,25 +316,24 @@ footer {
   .nav {
     
     position: fixed;
-    /* top: 0;
-    right: 0;*/
+    top: 0;
+    /*right: 0;*/
     height: 40vh;
      
     top: 70px;
-    right: 0;
+    right: -200px;
     background: rgb(240, 209, 224);
     color: rgb(20, 20, 20);
     width: 200px;
     display: flex; /* must be flex for ul to stack vertically */
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    transform: translateX(100%);
+    
+    /* transform: translateX(100%); */
     transition: 0.3s;
     z-index: 999;
   }
   .nav.active {
-    transform: translateX(0);
+    right: 0; 
   }
   .nav ul {
     flex-direction: column;
