--- a/style.css
+++ b/style.css
@@ -255,7 +255,7 @@ h2{
 
 .project-card {
   
-  background: #f5f5f5;
+  background: #ffffff;
   padding: 1.3em;
   border-radius: 12px;
   box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
